# destiny1-telegram-bot

./: .env  .gitignore  .gitignore.bak  Dockerfile  README.md  bot.sh  docker-compose.yml  fix_webhook.sh  md  pyproject.toml  requirements.txt  run.py  setup.sh  start.sh  update_webhook.sh  vercel.json
api/: index.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  oauth.py  webhook.py
app/core/: config.py  config_old.py  constants.py  d1_event_notifier.py  d1_events.py  d1_items_db.py  exceptions.py  logging.py
app/infrastructure/: cache.py  circuit_breaker.py  http_client.py  user_stats_storage.py
app/services/: base.py  destiny1_service.py  formatting.py  oauth_handler.py  orchestrator.py  registry.py
app/services/adapters/: __init__.py  bungie_adapter.py  telegram_adapter.py
app/services/handlers/: d1_handlers.py  d1_handlers_backup.py  d2_handlers.py
static/: oauth_callback.html
tests/: test_api.py
